@@ -21,6 +21,7 @@ Verilator 5.009 devel
 * Fix UNDRIVEN warning seg fault (#3989). [Felix Neumärker]
 * Fix symbol entries when inheriting classes (#3995) (#3996). [Krzysztof Boroński]
 * Fix push to dynamic queue in struct (#4015). [ezchi]
+* Fix large return blocks with --comp-limit-blocks (#4028). [tenghtt]
 * Fix clocking block scope internal error (#4032). [Srinivasan Venkataramanan]
 * Fix false ENUMVALUE on expressions and arrays.
 
